2003-07-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved the catalogue query classes to chare a common namespace,
          current classes now inherit from the Astro::Catalog::Transport::REST
          class. While future web and GRID service classes will inherit from
          related classes. All the Astro::Catalog::Transport classes inherit
          from Tim's BaseQuery class.

2003-07-27  Tim Jenness <timj@jach.hawaii.edu>

        * Added sorting and filtering of catalogues.

2003-07-26  Tim Jenness <timj@jach.hawaii.edu> 
            & Alasdiar Allan <aa@astro.ex.ac.uk>
            
        * Added pluggable IO.
            
2003-07-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * t/catalog.t: Tests fixed to reflect the new two decimal place
          precisions generated by using Astro::Coords objects
          
2003-07-24  Tim Jenness <timj@jach.hawaii.edu>

	* BaseQuery/BaseQuery.pm: Write base class for catalog query classes.

	* Catalog.pm (_read_cluster): No longer use ra() and dec() methods
	to set the ra and dec (store the Astro::Coords object directly)

	* Star/Star.pm: ra($ra) and dec($dec) methods now deprecated.

        * t/1_compile.t: New tests addded.
        
2003-07-23  Tim Jenness <timj@jach.hawaii.edu>

	* Star/Star.pm: Now uses Astro::Coords internally.

	* Catalog.pm: Now uses Astro::Coords internally. Switch to lexical
	  filehandles.

2003-07-19  Alasdair Allan <aa@astro.ex.ac.uk> (version 2.1.3)

        * Catalog.pm: added patch by Brad Cavanagh to popstarbyid()
        
2003-07-15  Alasdair Allan <aa@astro.ex.ac.uk> (version 2.1.2)

        * Minor documentation tweaks
        
        * Added some example scripts to the distribution
          
2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>

        * Catalog.pm: Fixed bug in new _read_cluster() routine for
          instances where we're reading from a file.
          
2003-06-09  Alasdair Allan <aa@astro.ex.ac.uk>
